dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=canuckcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=canuckcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=canuckcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=canuckcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=canuckcoin-wallet.1
endif
endif
